--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://github.io/usmonali4/squadbuilder",
+  "homepage": "https://usmonali4.github.io/squadbuilder",
   "name": "frontend",
   "version": "0.1.0",
   "private": true,
